<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WidthParentAndHeightContent"
    android:background="@color/pale_black"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/WidthParentAndHeightContent">

    <TextView
        android:id="@+id/tv_profile"
        style="@style/WrapContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/profile"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        android:src="@drawable/ic_photo_profile" />

    <Button
        android:id="@+id/btn_change_image"
        style="@style/Button"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        android:text="@string/change_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/prompt_username"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_image"
        android:paddingHorizontal="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_username"
            style="@style/WidthParentAndHeightContent"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_full_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_full_name"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_username"
        android:paddingHorizontal="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_fullname"
            style="@style/WidthParentAndHeightContent"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_address"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_full_name"
        android:paddingHorizontal="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_address"
            style="@style/WidthParentAndHeightContent"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_profile_update"
        style="@style/Button"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_profile_address"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/btn_profile_logout"
        style="@style/Button"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_profile_update"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>